Bugfix to build the code and updateing README

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -29,4 +29,4 @@ ADD_SUBDIRECTORY(hash_ring)
 ADD_SUBDIRECTORY(kvs)
 ADD_SUBDIRECTORY(monitor)
 ADD_SUBDIRECTORY(route)
-ADD_SUBDIRECTORY(benchmark)
+#ADD_SUBDIRECTORY(benchmark)
