--- a/.gitignore
+++ b/.gitignore
@@ -17,6 +17,8 @@ build
 vendor/gtest/build
 *log*.txt
 *tmp*
+conf/annabella-master-template.yml
+conf/annabella-slave-template.yml
 
 # ignore compiled byte code
 target
